pl 9.jcn2
	- bf/redo: slur.cc, encompass-info: setting of encompass array.  
	- switched tuplet-engaver off (core dumps)

pl 9.jcn1	
	- bf (urg): no |: at start of piece
	- bf?: text defs without width
	- alignment absolute dynamics
	- mutopia/opus-130.ly (excerpt, triggered by GUIDO)
	- bf: crescendo symbol

pl 9
	- fixed \relative

pl8.tca1
        - changes to mudela-book. Junked fragment and floating options,
          added eps option. Options should not stay as long that you get
          comfortable with them. ;)
        - Also possible to define your own commands with
          a syntax like \mudela{c d e}
        - updated mudela-book-doc.doc

pl 8.jcn3
	- website: gnuisation of footers

pl 8.jcn2
	- input/test/vertical-text.ly: urg ydim of text chords
	- bf: one set of |: :| volta per staff
	- bf: init/table* braces + more braces
	- try at score-volta-bracket

pl 8.jcn1
	- bf: lyric-engraver: handle multiple requests (don't overwrite)
	- bf: guile-config
	- music-list-iterator

pl 8.hwn3
	- coriolan corno 1

pl 8.hwn2
	- more output revamping.

pl 8.hwn1
	- Scheme output stuff
	- tutorial fixes.

*****************
pl 8

pl7.jcn3
	- bf's: spanner/volta
	- volta-support: via Note, Bar, and Paper-column to Bar (item)

pl7.jcn2
	- note repeats

pl7.jcn1
	- configure/guile fixes (still no check for 1.2/1.3)

pl7.hwn1
	- tutorial fixes
	- tuplets over beams.

*****************
pl 7

pl6.jcn5
 	- repeatbars, volta-spanner work, alternative iteration still broken
 	- volta symbol

pl5.szmulewicz2
 	- more GUILE stuff.
	- tutorial doco updates

pl6.jcn4
 	- volta-spanner
 	- repeat-engraver
 	- repeat/alternative music layout (hehe)
  
pl6.uu1
	- Doco of music iterators.

********
pl 6

pl5.szmulewicz1
	- rtti stuff
	- bf's: lily.scm

pl5.mb1
	- bf: array.hh, don't make copy if resized to the same size
	- bf: feta.tex

pl5.jcn4
	- scm additions: plet, hairpin
	- website fixes

pl5.jcn3
	- website fixes

pl5.jcn2
	- extender-*, see input/test/extender.ly