@@ -12,14 +12,14 @@ table_sixteen=
    % index symbol #parameters  	xmin xmax ymin ymax
 
      "style" = \table {
-		"bold"	"setbold"	1			0.0\pt	7.50\pt	0.0\pt	8.0\pt
+		"bold"	"setbold"	1		0.0\pt	7.50\pt	0.0\pt	8.0\pt
 		"dynamic"	"setdynamic"	1	0.0\pt	0.0\pt	0.0\pt	8.0\pt
 		"finger"	"setfinger"	1	0.0\pt	2.0\pt	0.0\pt	4.0\pt
 		"italic"	"setitalic"	1	0.0\pt	4.\pt	0.0\pt	8.0\pt
 		"typewriter"	"settypewriter"	1	0.0\pt	4.\pt	0.0\pt	8.0\pt
 		"large"	"setlarge"	1			0.0\pt	9.50\pt	0.0\pt	10.0\pt
 		"number"	"setnumber"	1	0.0\pt	6.0\pt	0.0\pt	8.0\pt
-		"number-1"	"setnumber-1"	1	0.0\pt	4.0\pt	0.0\pt	6.0\pt
+		"number-1"	"setnumber-1"	1	0.0\pt	4.0\pt	0.0\pt	5.0\pt
 		"roman"	"settext"	1			0.0\pt	4.5\pt	0.0\pt	8.0\pt
      }
      "dynamics" = \table {
