@@ -19,11 +19,10 @@ class Repeated_music : public Music
 {
 public:
   int repeats_i_;
+  bool unfold_b_;
   Music* repeat_p_;
-//  Music_list* alternative_p_;
   Music_sequence* alternative_p_;
 
-//  Repeated_music (Music*, int n, Music_list*);
   Repeated_music (Music*, int n, Music_sequence*);
   Repeated_music (Repeated_music const& s);
   virtual ~Repeated_music ();
