@@ -11,7 +11,7 @@
 #include "debug.hh"
 #include "lookup.hh"
 #include "molecule.hh"
-//#include "note-column.hh"
+#include "note-column.hh"
 #include "p-col.hh" // urg
 #include "bar.hh"
 #include "p-col.hh"
@@ -40,27 +40,34 @@ Volta_spanner::brew_molecule_p () const
 {
   Molecule* mol_p = new Molecule;
 
-  if (column_arr_.size ()){
-    Real dx = paper ()->internote_f ();
-    Real w = width ().length () - 2 * dx;
-    Real dy = column_arr_.top ()->extent (Y_AXIS) [dir_] > 
-      column_arr_[0]->extent (Y_AXIS) [dir_];
-    dy += 4;
+  if (column_arr_.size ())
+    {
+      Real internote_f = paper ()->internote_f ();
+      Real dx = internote_f;
+      Real w = width ().length () - 2 * dx;
+      Atom volta (lookup_l ()->volta (w, last_b_));
+      Real h = volta.dim_.y ().length ();
+      Atom num (number_p_->get_atom (paper (), LEFT));
+      Atom dot (dot_p_->get_atom (paper (), LEFT));
+      Real dy = column_arr_.top ()->extent (Y_AXIS) [dir_] > 
+	column_arr_[0]->extent (Y_AXIS) [dir_];
+      dy += 2 * h;
+      for (int i = 0; i < note_column_arr_.size (); i++)
+        dy = dy >? note_column_arr_[i]->height ().max ();
+      dy -= h;
 
-    Atom num (number_p_->get_atom (paper (), LEFT));
-    Atom dot (dot_p_->get_atom (paper (), LEFT));
-    Real gap = num.dim_.x ().length () / 2;
-    Offset off (num.dim_.x ().length () + gap, 
-      num.dim_.y ().length () - 4 - gap / paper ()->internote_f ());
-    // urg?
-    off -= Offset (0, num.dim_.y ().length () + gap / paper ()->internote_f ());
-    num.translate (off);
-    dot.translate (off);
-    mol_p->add_atom (num);
-    mol_p->add_atom (dot);
-    mol_p->add_atom (lookup_l ()->volta (w, last_b_));
-    mol_p->translate (Offset (dx, dy));
-  }
+      Real gap = num.dim_.x ().length () / 2;
+      Offset off (num.dim_.x ().length () + gap, 
+        (h - num.dim_.y ().length ()) / internote_f - gap);
+      num.translate (off);
+      Real dotheight = dot.dim_.y ().length () / 7;
+      off -= Offset (0, dotheight);
+      dot.translate (off);
+      mol_p->add_atom (volta);
+      mol_p->add_atom (num);
+      mol_p->add_atom (dot);
+      mol_p->translate (Offset (dx, dy));
+    }
   return mol_p;
 }
   
@@ -87,17 +94,23 @@ Volta_spanner::do_post_processing ()
 void
 Volta_spanner::do_substitute_dependency (Score_element* o, Score_element* n)
 {
-//  if (Note_column* c = dynamic_cast <Note_column*> (o))
-//    column_arr_.substitute (c, dynamic_cast<Note_column*> (n));
-  if (Bar* c = dynamic_cast <Bar*> (o))
+  if (Note_column* c = dynamic_cast <Note_column*> (o))
+    note_column_arr_.substitute (c, dynamic_cast<Note_column*> (n));
+  else if (Bar* c = dynamic_cast <Bar*> (o))
     column_arr_.substitute (c, dynamic_cast<Bar*> (n));
 }
   
 void
-//Volta_spanner::add_column (Note_column* c)
 Volta_spanner::add_column (Bar* c)
 {
   column_arr_.push (c);
+  add_dependency (c);
+}
+
+void
+Volta_spanner::add_column (Note_column* c)
+{
+  note_column_arr_.push (c);
   add_dependency (c);
 }
 
