@@ -1,3 +1,11 @@
+pl 9.jcn3
+	- property: unfoldRepeats; unfolding still broken
+	- volta spanner y-collision
+	- bf: volta number,dot placement
+	- bf's: init/table16,20
+	- small additions to init/lily.scm to enable some testing
+	- junked extra repeat braces
+
 pl 9.jcn2
 	- bf/redo: slur.cc, encompass-info: setting of encompass array.  
 	- switched tuplet-engaver off (core dumps)
